added biblography and pdfs

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,113 +3,73 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{JONES2025111241,
+  title = {Collapse and restoration of mature forest habitat in California},
+  journal = {Biological Conservation},
+  volume = {308},
+  pages = {111241},
+  year = {2025},
+  issn = {0006-3207},
+  doi = {https://doi.org/10.1016/j.biocon.2025.111241},
+  url = {https://www.sciencedirect.com/science/article/pii/S0006320725002782},
+  author = {Gavin M. Jones and Brandon M. Collins and Lacey E. Hankin and Ronan Hart and Marc D. Meyer and Jon Regelbrugge and Zachary L. Steel and Craig Thompson},
+  keywords = {Ecosystem collapse, Megafire, Fuels reduction, Forest restoration, Old growth},
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{https://doi.org/10.1111/ddi.70023,
+  author = {Hart, Ronan and Thompson, Craig M. and Tucker, Jody M. and Sawyer, Sarah C. and Eyes, Stephanie A. and Saberi, Saba J. and Yang, Zhiqiang and Jones, Gavin M.},
+  title = {Rapid Declines in Southern Sierra Nevada Fisher Habitat Driven by Drought and Wildfire},
+  journal = {Diversity and Distributions},
+  volume = {31},
+  number = {5},
+  pages = {e70023},
+  keywords = {disturbance, drought, fisher, forest restoration, Google earth engine, habitat loss, megafires, Pekania pennanti, Sierra Nevada, species distribution model},
+  doi = {https://doi.org/10.1111/ddi.70023},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ddi.70023},
+  eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/ddi.70023},
+  note = {e70023 DDI-2024-0268.R3},
+  year = {2025},
+  pdf = {assets/pdf/2025_Hart-Rapid Declines.pdf}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{https://doi.org/10.1111/ecog.07225,
+  author = {Winter, Veronica A. and Smith, Brian J. and Berger, Danielle J. and Hart, Ronan B. and Huang, John and Manlove, Kezia and Buderman, Frances E. and Avgar, Tal},
+  title = {Forecasting animal distribution through individual habitat selection: insights for population inference and transferable predictions},
+  journal = {Ecography},
+  volume = {2024},
+  number = {11},
+  pages = {e07225},
+  keywords = {Antilicopra americana, context dependence, habitat selection functions, model transferability, scale, species distribution models},
+  doi = {https://doi.org/10.1111/ecog.07225},
+  url = {https://nsojournals.onlinelibrary.wiley.com/doi/abs/10.1111/ecog.07225},
+  eprint = {https://nsojournals.onlinelibrary.wiley.com/doi/pdf/10.1111/ecog.07225},
+  year = {2024},
+  pdf = {assets/pdf/2024_Winter_Forecasting animal distribution.pdf}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@article{10.3389/fevo.2022.742275,
+  author = {Berger, Danielle J.  and German, David W.  and John, Christian  and Hart, Ronan  and Stephenson, Thomas R.  and Avgar, Tal },   
+  title = {Seeing Is Be-Leaving: Perception Informs Migratory Decisions in Sierra Nevada Bighorn Sheep (Ovis canadensis sierrae)},
+  journal = {Frontiers in Ecology and Evolution},
+  volume = {Volume 10 - 2022},
+  year = {2022},
+  url = {https://www.frontiersin.org/journals/ecology-and-evolution/articles/10.3389/fevo.2022.742275},
+  doi = {10.3389/fevo.2022.742275},
+  issn = {2296-701X},
+  pdf = {assets/pdf/2022_Berger_Seeing is Be-Leaving.pdf}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{ijerph17144914,
+  author = {Hart, Ronan and Liang, Lu and Dong, Pinliang},
+  title = {Monitoring, Mapping, and Modeling Spatial–Temporal Patterns of PM2.5 for Improved Understanding of Air Pollution Dynamics Using Portable Sensing Technologies},
+  journal = {International Journal of Environmental Research and Public Health},
+  volume = {17},
+  year = {2020},
+  number = {14},
+  article-number = {4914},
+  url = {https://www.mdpi.com/1660-4601/17/14/4914},
+  pubmedid = {32650399},
+  issn = {1660-4601},
+  doi = {10.3390/ijerph17144914},
+  pdf = {assets/pdf/2020_Hart_Monitoring Mapping and Modeling.pdf}
 }
